// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fail screen correctly renders after relaunch Mistakes fail 1`] = `
<section
  className="result"
>
  <div
    className="result__logo"
  >
    <img
      alt="Угадай мелодию"
      height="83"
      src="img/melody-logo.png"
      width="186"
    />
  </div>
  <h2
    className="result__title"
  >
    Какая жалость!
  </h2>
  <p
    className="result__total result__total--fail"
  >
    У вас закончились все попытки. Ничего, повезёт в следующий раз!
  </p>
  <a
    className="replay"
    href="/"
    onClick={[Function]}
  >
    Попробовать ещё раз
  </a>
</section>
`;

exports[`Fail screen correctly renders after relaunch Time fail 1`] = `
<section
  className="result"
>
  <div
    className="result__logo"
  >
    <img
      alt="Угадай мелодию"
      height="83"
      src="img/melody-logo.png"
      width="186"
    />
  </div>
  <h2
    className="result__title"
  >
    Увы и ах!
  </h2>
  <p
    className="result__total result__total--fail"
  >
    Время вышло! Вы не успели отгадать все мелодии
  </p>
  <a
    className="replay"
    href="/"
    onClick={[Function]}
  >
    Попробовать ещё раз
  </a>
</section>
`;
